feat: configuration file
also implement tests